centering text and resizing images to fit mobile

--- a/index.html
+++ b/index.html
@@ -9,22 +9,24 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
-    <header class="container">
+<body class="wrap">
+    <header>
         <h1 id="title">Student Name</h1>
-        <nav>
-            <ul>
-                <a href="#" target="_self">
-                    <li>Home</li>
-                </a>
-                <a href="#" target="_self">
-                    <li>Portfolio</li>
-                </a>
-                <a href="#" target="_self">
-                    <li>Contact</li>
-                </a>
-            </ul>
-        </nav>
+        <div class="nav">
+            <nav>
+                <ul>
+                    <a href="#" target="_self">
+                        <li>Home</li>
+                    </a>
+                    <a href="#" target="_self">
+                        <li>Portfolio</li>
+                    </a>
+                    <a href="#" target="_self">
+                        <li>Contact</li>
+                    </a>
+                </ul>
+            </nav>
+        </div>
     </header>
     <!-- Introduction -->
     <main>
