--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="light-grey">
-        <h1 class="title textGrey" id="title">Student Name</h1>
+        <h1 class="title" id="title">Student Name</h1>
         <div class="nav wrap">
             <nav>
                 <ul>
