--- a/index.html
+++ b/index.html
@@ -39,49 +39,61 @@
     <!-- Content -->
     <main>
         <div class="wrap">
-            <h2 id="portfolio">Portfolio</h2>
+            <h3 id="portfolio">Portfolio</h3>
+            <section>
+                <img class="projectpic" src="images/portfolio-1.png" alt="Marketing picture">
+                <h4 class="contentT">Marketing Page</h4>
+                <p class="contentP">This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+            </section>
 
-            <img class="projectpic" src="images/portfolio-1.png" alt="Marketing picture">
-            <P class="contentT">Marketing Page</P>
-            <p class="contentP">This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+            <section>
+                <img class="projectpic" src="images/portfolio-2.png" alt="Search page picture">
+                <h4 class="contentT">Search page</h4>
+                <p class="contentP">This project searches through a specific database to find information that the user is trying to look up.</p>
+            </section>
 
-            <img class="projectpic" src="images/portfolio-2.png" alt="Search page picture">
-            <p class="contentT">Search Page</p>
-            <p class="contentP">This project searches through a specific database to find information that the user is trying to look up.</p>
+            <section>
+                <img class="projectpic" src="images/portfolio-3.png" alt="Travel app picture">
+                <h4 class="contentT">Travel App</h4>
+                <p class="contentP">This project compares travel times based on different transportation methods and tells you the best one.</p>
+            </section>
 
-            <img class="projectpic" src="images/portfolio-3.png" alt="Travel app picture">
-            <p class="contentT">Travel App</p>
-            <p class="contentP">This project compares travel times based on different transportation methods and tells you the best one.</p>
+            <section>
+                <img class="projectpic" src="images/portfolio-4.png" alt="Favourite spots map picture">
+                <h4 class="contentT">Map of Favourite Spots</h4>
+                <p class="contentP">This project uses mapping apis to plot points of my favourite spots in the city for a do-it-yourself walking tour.</p>
+            </section>
 
-            <img class="projectpic" src="images/portfolio-4.png" alt="Favourite spots map picture">
-            <p class="contentT">Map of Favourite Spots</p>
-            <p class="contentP">This project uses mapping apis to plot points of my favourite spots in the city for a do-it-yourself walking tour.</p>
+            <section>
+                <img class="projectpic" src="images/portfolio-5.png" alt="Photo gallery picture">
+                <h4 class="contentT">Photo Gallery</h4>
+                <p class="contentP">This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+            </section>
 
-            <img class="projectpic" src="images/portfolio-5.png" alt="Photo gallery picture">
-            <p class="contentT">Photo Gallery</p>
-            <p class="contentP">This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-
-            <img class="projectpic" src="images/portfolio-6.png" alt="Calculator app picture">
-            <p class="contentT">Calculator</p>
-            <p class="contentP">Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+            <section>
+                <img class="projectpic" src="images/portfolio-6.png" alt="Calculator app picture">
+                <h4 class="contentT">Calculator</h4>
+                <p class="contentP">Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+            </section>
         </div>
     </main>
     <!-- End of Content -->
 
     <!-- Contact Section -->
-
-    <h2 class="wrap" id="contact">Contact</h2>
-    <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
-    <p class="contactT">Phone<span class="contactDetails">+1(111)555-1234</span></p>
-    <p class="contactT">Email<span class="contactDetails">email@yoursite.com</span></p>
+    <div class="light-grey">
+        <div class="contact wrap">
+            <h3 class="contactTitle wrap" id="contact">Contact</h3>
+            <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+            <p>Phone<span class="contactDetails">+1(111)555-1234</span></p>
+            <p>Email<span class="contactDetails">email@yoursite.com</span></p>
     <!-- End of Content Section -->
-
-    <!-- footer -->
-    <footer>
-        <p>Student name</p>
-        <a href="#">Back To Top</a>
-    </footer>
-
+        </div>
+        <!-- footer -->
+        <footer class="footer">
+            <p class="student-name">Student name</p>
+            <a class="bck2top" href="#title">Back To Top</a>
+        </footer>
+    </div>
 
 
 </body>
