complete footer styling

--- a/index.html
+++ b/index.html
@@ -89,9 +89,11 @@
     <!-- End of Content Section -->
         </div>
         <!-- footer -->
-        <footer class="footer">
-            <p class="student-name">Student name</p>
-            <a class="bck2top" href="#title">Back To Top</a>
+        <footer>
+            <div class="footer wrap">
+                <h3 class="student-name footer-text">Student name</h3>
+                <a class="bck2top footer-text" href="#title">Back To Top</a>
+            </div>
         </footer>
     </div>
 
