complete table screen header and content styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="light-grey">
+    <header class="light-grey clearfix">
         <h1 class="title" id="title">Student Name</h1>
         <div class="nav wrap">
             <nav>
@@ -18,7 +18,7 @@
                     <a href="#title" target="_self">
                         <li>Home</li>
                     </a>
-                    <a href="#portfolio" target="_self">
+                    <a href="#portfolios" target="_self">
                         <li>Portfolio</li>
                     </a>
                     <a href="#contact" target="_self">
@@ -39,42 +39,42 @@
     <!-- Content -->
     <main>
         <div class="wrap">
-            <h3 id="portfolio">Portfolio</h3>
-            <section>
+            <h3 class="portfolios" id="portfolios">Portfolio</h3>
+            <div class="portfolio">
                 <img class="projectpic" src="images/portfolio-1.png" alt="Marketing picture">
                 <h4 class="contentT">Marketing Page</h4>
                 <p class="contentP">This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
-            </section>
+            </div>
 
-            <section>
+            <div class="portfolio">
                 <img class="projectpic" src="images/portfolio-2.png" alt="Search page picture">
                 <h4 class="contentT">Search page</h4>
                 <p class="contentP">This project searches through a specific database to find information that the user is trying to look up.</p>
-            </section>
+            </div>
 
-            <section>
+            <div class="portfolio">
                 <img class="projectpic" src="images/portfolio-3.png" alt="Travel app picture">
                 <h4 class="contentT">Travel App</h4>
                 <p class="contentP">This project compares travel times based on different transportation methods and tells you the best one.</p>
-            </section>
+            </div>
 
-            <section>
+            <div class="portfolio">
                 <img class="projectpic" src="images/portfolio-4.png" alt="Favourite spots map picture">
                 <h4 class="contentT">Map of Favourite Spots</h4>
                 <p class="contentP">This project uses mapping apis to plot points of my favourite spots in the city for a do-it-yourself walking tour.</p>
-            </section>
+            </div>
 
-            <section>
+            <div class="portfolio">
                 <img class="projectpic" src="images/portfolio-5.png" alt="Photo gallery picture">
                 <h4 class="contentT">Photo Gallery</h4>
                 <p class="contentP">This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-            </section>
+            </div>
 
-            <section>
+            <div class="portfolio">
                 <img class="projectpic" src="images/portfolio-6.png" alt="Calculator app picture">
                 <h4 class="contentT">Calculator</h4>
                 <p class="contentP">Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
-            </section>
+            </div>
         </div>
     </main>
     <!-- End of Content -->
