--- a/index.html
+++ b/index.html
@@ -92,7 +92,20 @@
         <footer>
             <div class="footer wrap">
                 <h3 class="student-name footer-text">Student name</h3>
-                <a class="bck2top footer-text" href="#title">Back To Top</a>
+                <a class="back2top footer-text" href="#title">Back To Top</a>
+                <div class="foot-menu footer-text">
+                    <ul>
+                        <a href="#title" target="_self">
+                            <li>Home</li>
+                        </a>
+                        <a href="#portfolios" target="_self">
+                            <li>Portfolio</li>
+                        </a>
+                        <a href="#contact" target="_self">
+                            <li>Contact</li>
+                        </a>
+                    </ul>
+                </div>
             </div>
         </footer>
     </div>
