add div.wrap to header

--- a/index.html
+++ b/index.html
@@ -11,21 +11,24 @@
 
 <body>
     <header class="light-grey clearfix">
+
+        <div class="wrap clearfix">
         <h1 class="title" id="title">Student Name</h1>
-        <div class="nav wrap">
-            <nav>
-                <ul>
-                    <a href="#title" target="_self">
-                        <li>Home</li>
-                    </a>
-                    <a href="#portfolios" target="_self">
-                        <li>Portfolio</li>
-                    </a>
-                    <a href="#contact" target="_self">
-                        <li>Contact</li>
-                    </a>
-                </ul>
-            </nav>
+            <div class="nav">
+                <nav>
+                    <ul>
+                        <a href="#title" target="_self">
+                            <li>Home</li>
+                        </a>
+                        <a href="#portfolios" target="_self">
+                            <li>Portfolio</li>
+                        </a>
+                        <a href="#contact" target="_self">
+                            <li>Contact</li>
+                        </a>
+                    </ul>
+                </nav>
+            </div>
         </div>
 
         <!-- Introduction -->
