revert nav menu <li> and <a> for validation

--- a/index.html
+++ b/index.html
@@ -17,15 +17,9 @@
             <div class="nav">
                 <nav>
                     <ul>
-                        <a href="#title" target="_self">
-                            <li>Home</li>
-                        </a>
-                        <a href="#portfolios" target="_self">
-                            <li>Portfolio</li>
-                        </a>
-                        <a href="#contact" target="_self">
-                            <li>Contact</li>
-                        </a>
+                        <li><a href="#title" target="_self">Home</a></li>
+                        <li><a href="#portfolios" target="_self">Portfolio</a></li>
+                        <li><a href="#contact" target="_self">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -98,15 +92,9 @@
                 <a class="back2top footer-text" href="#title">Back To Top</a>
                 <div class="foot-menu footer-text">
                     <ul>
-                        <a href="#title" target="_self">
-                            <li>Home</li>
-                        </a>
-                        <a href="#portfolios" target="_self">
-                            <li>Portfolio</li>
-                        </a>
-                        <a href="#contact" target="_self">
-                            <li>Contact</li>
-                        </a>
+                        <li><a href="#title" target="_self">Home</a></li>
+                        <li><a href="#portfolios" target="_self">Portfolio</a></li>
+                        <li><a href="#contact" target="_self">Contact</a></li>
                     </ul>
                 </div>
             </div>
