--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 </head>
 
 <body>
-    <header class="bgcolor header">
+    <header class="bgcolor ">
 
-        <div class="wrap container">
+        <div class="wrap flex header">
             <h1 class="title" id="title">Student Name</h1>
-            <nav class="nav container">
-                <ul>
+            <nav class="nav ">
+                <ul class="flex">
                     <li><a class="item" href="#title" target="_self">Home</a></li>
-                    <li><a class="item" href="#portfolios" target="_self">Portfolio</a></li>
-                    <li><a class="item" href="#contact" target="_self">Contact</a></li>
+                    <li><a class="item" href="#portfo-title" target="_self">Portfolio</a></li>
+                    <li><a class="item" href="#contact-title" target="_self">Contact</a></li>
                 </ul>
             </nav>
         </div>
 
         <!-- Introduction -->
-        <div class="wrap">
-            <img src="images/responsive-layout-profile.png" alt="Profile Photo" class="profile">
+        <div class="wrap flex intro">
+            <img class="profile" src="images/responsive-layout-profile.png" alt="Profile Photo">
             <p class="intro-article">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
         </div>
     </header>
@@ -34,40 +34,40 @@
     <!-- Content -->
     <main>
         <div class="wrap">
-            <h3 class="portfolios" id="portfolios">Portfolio</h3>
+            <h3 class="portfo-title" id="portfo-title">Portfolio</h3>
 
-            <div class="container">
-                <div class="portfolio">
+            <div class="flex portfolios">
+                <div class="flex portfolio ">
                     <img class="projectpic" src="images/portfolio-1.png" alt="Marketing picture">
                     <h4 class="contentT">Marketing Page</h4>
                     <p class="contentP">This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
                 </div>
 
-                <div class="portfolio">
+                <div class="flex portfolio">
                     <img class="projectpic" src="images/portfolio-2.png" alt="Search page picture">
                     <h4 class="contentT">Search page</h4>
                     <p class="contentP">This project searches through a specific database to find information that the user is trying to look up.</p>
                 </div>
 
-                <div class="portfolio">
+                <div class="flex portfolio">
                     <img class="projectpic" src="images/portfolio-3.png" alt="Travel app picture">
                     <h4 class="contentT">Travel App</h4>
                     <p class="contentP">This project compares travel times based on different transportation methods and tells you the best one.</p>
                 </div>
 
-                <div class="portfolio">
+                <div class="flex portfolio">
                     <img class="projectpic" src="images/portfolio-4.png" alt="Favourite spots map picture">
                     <h4 class="contentT">Map of Favourite Spots</h4>
                     <p class="contentP">This project uses mapping apis to plot points of my favourite spots in the city for a do-it-yourself walking tour.</p>
                 </div>
 
-                <div class="portfolio">
+                <div class="flex portfolio">
                     <img class="projectpic" src="images/portfolio-5.png" alt="Photo gallery picture">
                     <h4 class="contentT">Photo Gallery</h4>
                     <p class="contentP">This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
                 </div>
 
-                <div class="portfolio">
+                <div class="flex portfolio">
                     <img class="projectpic" src="images/portfolio-6.png" alt="Calculator app picture">
                     <h4 class="contentT">Calculator</h4>
                     <p class="contentP">Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
@@ -79,8 +79,8 @@
 
     <!-- Contact Section -->
     <div class="bgcolor">
-        <div class="contact wrap container">
-            <h3 class="contactTitle wrap" id="contact">Contact</h3>
+        <div class="flex contact wrap ">
+            <h3 class="contact-title" id="contact-title">Contact</h3>
             <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
             <p>Phone<span class="contactDetails">+1(111)555-1234</span></p>
             <p>Email<span class="contactDetails">email@yoursite.com</span></p>
@@ -88,14 +88,14 @@
         </div>
         <!-- footer -->
         <footer>
-            <div class="wrap container footer">
+            <div class="wrap footer">
                 <h3 class="">Student name</h3>
                 <a class="back2top" href="#title">Back To Top</a>
-                <nav class="foot-display ">
-                    <ul>
-                        <li><a href="#title" target="_self">Home</a></li>
-                        <li><a href="#portfolios" target="_self">Portfolio</a></li>
-                        <li><a href="#contact" target="_self">Contact</a></li>
+                <nav class="nav foot-display">
+                    <ul class="flex">
+                        <li><a class="item" href="#title" target="_self">Home</a></li>
+                        <li><a class="item" href="#portfo-title" target="_self">Portfolio</a></li>
+                        <li><a class="item" href="#contact-title" target="_self">Contact</a></li>
                     </ul>
                 </nav>
             </div>
