add skills section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <ul class="flex">
                     <li><a class="item" href="#title" target="_self">Home</a></li>
                     <li><a class="item" href="#portfo-title" target="_self">Portfolio</a></li>
+                    <li><a class="item" href="#skills" target="_self">Skills</a></li>
                     <li><a class="item" href="#contact-title" target="_self">Contact</a></li>
                 </ul>
             </nav>
@@ -71,6 +72,22 @@
                     <img class="projectpic" src="images/portfolio-6.png" alt="Calculator app picture">
                     <h4 class="contentT">Calculator</h4>
                     <p class="contentP">Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+                </div>
+            </div>
+
+            <h3 class="portfo-title" id="skills">Skills</h3>
+
+            <div class="flex skills" id="skills">
+                <div class="flex portfolio">
+                    <img src="images/cooking.jpg" alt="Picture of cooking." class="projectpic">
+                    <h4 class="contentT">Cooking</h4>
+                    <p class="contentP">I can cook instant noodles, sausages, dumplings and eggs, but that's all.</p>
+                </div>
+
+                <div class="flex portfolio">
+                    <img src="images/videogaming.jpg" alt="Picture of videogaming" class="projectpic">
+                    <h4 class="contentT">Videogaming</h4>
+                    <p class="contentP">I play videogames, my favourite game is Legend of Zelda by Nintendo.</p>
                 </div>
             </div>
         </div>
