reverse background color for contact session

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- End of Content -->
 
     <!-- Contact Section -->
-    <div class="bgcolor">
+    <div class="bgcolor2">
         <div class="flex contact wrap ">
             <h3 class="contact-title" id="contact-title">Contact</h3>
             <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
