validation corrected for duplicated id#skills

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
             <h3 class="portfo-title" id="skills">Skills</h3>
 
-            <div class="flex skills" id="skills">
+            <div class="flex skills">
                 <div class="flex portfolio">
                     <img src="images/cooking.jpg" alt="Picture of cooking." class="projectpic">
                     <h4 class="contentT">Cooking</h4>
