--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                     <ul class="flex">
                         <li><a class="item" href="#title" target="_self">Home</a></li>
                         <li><a class="item" href="#portfo-title" target="_self">Portfolio</a></li>
+                        <li><a class="item" href="#skills" target="_self">Skills</a></li>
                         <li><a class="item" href="#contact-title" target="_self">Contact</a></li>
                     </ul>
                 </nav>
